# diff_vesc_can_ros2_control

./: CMakeLists.txt  CODE_DOCUMENTATION_ENHANCEMENT.md  CONTROL_DOCS.md  DOCUMENTATION.md  README.md  SIMULATION_GUIDE.md  SYSTEM_OVERVIEW.md  WORKFLOW.md  diff_vesc_can_ros2_control.xml  package.xml
SCRIPTS/: simulate_cmdvel_to_can.py
bringup/config/: diffbot_controllers.yaml
bringup/launch/: diffbot.launch.py  diffbot_gazebo_pure.launch.py
description/launch/: view_robot.launch.py
description/ros2_control/: diffbot.ros2_control.xacro
description/urdf/: diffbot.urdf.xacro  diffbot_description.urdf.xacro  diffbot_gazebo.urdf.xacro  diffbot_gazebo_main.urdf.xacro
hardware/: diffbot_system.cpp  vesc_can_diffbot_system.cpp  vesc_diffbot_system.cpp
hardware/include/diff_vesc_can_ros2_control/: diffbot_system.hpp  vesc_can_diffbot_system.hpp  vesc_diffbot_system.hpp
rviz/: diffbot.rviz
worlds/: diffbot_world.world
